<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_24"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:contentDescription="@string/menus_image"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="@id/civ_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/civ_user" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:contentDescription="@string/user_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/im_user_sanji"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_38"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/hello_username"
                    android:textColor="@color/white_primary"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintTop_toBottomOf="@id/iv_menu" />

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/text_info_in_home"
                    android:textColor="@color/white_secondary"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintTop_toBottomOf="@id/tv_username" />

                <LinearLayout
                    android:id="@+id/container_search"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_17"
                    android:layout_marginEnd="@dimen/dp_14"
                    android:background="@drawable/bg_container_search"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10"
                    app:layout_constraintEnd_toStartOf="@id/iv_filter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_info">

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:contentDescription="@string/search_image"
                        android:src="@drawable/ic_search" />

                    <EditText
                        android:id="@+id/et_search"
                        style="@style/inputSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_5"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center|start"
                        android:hint="@string/search_hint"
                        tools:ignore="Autofill" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/filter_image"
                    android:src="@drawable/ic_search_filter"
                    app:layout_constraintBottom_toBottomOf="@id/container_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/container_search" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/categories"
            android:textColor="@color/white_primary"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tb_layout"
            style="@style/customTabStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vw_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>