<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dp_24"
    tools:context=".ui.splashscreen.SplashFragment">

    <TextView
        android:id="@+id/title_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/watch"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/from"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_one"/>

    <TextView
        android:id="@+id/title_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/everywhere"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_two"/>

    <TextView
        android:id="@+id/subtitle_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/find_your_favorite_movies_or_tv_shows"
        android:textColor="@color/white_secondary"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_three"/>

    <TextView
        android:id="@+id/subtitle_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/from_everywhere"
        android:textColor="@color/white_secondary"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_one"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_popcorn"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="https://assets8.lottiefiles.com/packages/lf20_cbrbre30.json"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_two"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/pb_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_popcorn"
        app:layout_constraintBottom_toTopOf="@id/tv_author"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pb_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_author"/>

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/created_by_hari_setiaji"
        android:textColor="@color/white_secondary"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>