<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:id="@+id/parent_detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_24"
        android:scrollbars="none"
        tools:context=".ui.detail.DetailMovieFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/parent_poster"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:cardCornerRadius="@dimen/dp_15"
                app:cardElevation="@dimen/dp_20"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/container_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster_image"
                        android:scaleType="fitXY"
                        tools:src="@drawable/poster_iron_fist" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="@dimen/dp_10"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white_primary"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parent_poster"
                tools:text="@string/title_dummy" />

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:contentDescription="@string/bookmark_image"
                android:src="@drawable/ic_bookmark_not_selected"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white_secondary"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="@string/genre_dummy" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white_secondary"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_genre"
                tools:text="@string/release_dummy" />

            <RatingBar
                android:id="@+id/rating"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release"
                tools:rating="5" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_11"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white_primary"
                android:textSize="@dimen/sp_13"
                app:layout_constraintBottom_toBottomOf="@id/rating"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintTop_toTopOf="@id/rating"
                tools:text="5.0" />

            <TextView
                android:id="@+id/tv_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white_secondary"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white_secondary"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_label"
                tools:text="@string/long_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

