<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/parent_poster"
        android:layout_width="@dimen/dp_112"
        android:layout_height="@dimen/dp_112"
        app:cardCornerRadius="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/poster_image"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_10"
        tools:text="@string/title_dummy"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toEndOf="@id/parent_poster"
        app:layout_constraintTop_toTopOf="@id/parent_poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_5"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        android:theme="@style/RatingBar"
        tools:rating="5"
        app:layout_constraintStart_toEndOf="@id/parent_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_11"
        android:fontFamily="@font/montserrat_regular"
        tools:text="5.0"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@id/rating"
        app:layout_constraintBottom_toBottomOf="@id/rating"/>

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_5"
        tools:text="@string/genre_dummy"
        android:textColor="@color/white_secondary"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toEndOf="@id/parent_poster"
        app:layout_constraintTop_toBottomOf="@id/rating"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@color/white_secondary"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toEndOf="@id/parent_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        tools:text="@string/duration_dummy"/>
</androidx.constraintlayout.widget.ConstraintLayout>